status/re/resources/0.1.0/macos/darwin-23.4.0/gnat=10.3.2/resources-0.1.0.yaml.log
Test ran at 2024-08-28 00:32:55.461759+00:00

SOLUTION:
resources=0.1.0: Utility library to handle project resources at run-time
Origin: commit a418da627ec3d18f50f60edaee41a2f47f173a0e from https://github.com/alire-project/resources.git
Properties:
   Author: Alire Team
   Description: Utility library to handle project resources at run-time
   License: MIT
   Maintainer: Fabien Chouteau <fabien.chouteau@gmail.com>
   Maintainers_Logins: Fabien-Chouteau
   Maintainers_Logins: mosteo
   Name: resources
   Tag: utils
   Version: 0.1.0
   Website: https://github.com/alire-project/resources


LOG:
Note: Deploying resources=0.1.0...
Note: Building resources/resources.gpr...
Setup
   [mkdir]        object directory for project Resources
   [mkdir]        library directory for project Resources
Compile
   [C]            whereami.c
   [Ada]          resources.adb
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/stdlib.h:62,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/cbc7e4de-848b-4a84-b7ba-1232f2154b1a/resources_0.1.0_a418da62/whereami/src/whereami.c:25:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of whereami.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/cbc7e4de-848b-4a84-b7ba-1232f2154b1a/resources_0.1.0_a418da62/resources.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/cbc7e4de-848b-4a84-b7ba-1232f2154b1a/resources_0.1.0_a418da62/resources.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/cbc7e4de-848b-4a84-b7ba-1232f2154b1a/resources_0.1.0_a418da62/resources.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x100bca000
Call stack traceback locations:
0x1014d2415 0x1011a5e83 0x1013b8df9 0x1013b9581 0x101319ac3 0x101317f99 0x101334873 0x101380dc1 0x10137f81a 0x1013349b8 0x101318349 0x100c299c1 0x100c3a578 0x100c3f01c 0x100cc505c 0x100cd03b8 0x100bcb605 0x100bce914


Warning: resources=0.1.0 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
